# FemtoEncoder

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/configs/: __init__.py  app_format.py  app_template.qss  config.py  dark_palette.csv  light_palette.csv  tooltips.py
src/gui/widgets/utils/: __init__.py  collapsible_box.py  default_window.py  neve_button.py  title_bar.py
src/gui/widgets/views/: __init__.py  handler.py
src/gui/windows/: win_log.py  win_main.py  win_support.py  win_theme.py
src/helpers/: __init__.py  dispatcher.py  faulthandler.py  logger.py  palette_injector.py  path.py  theme.py
