[tool.poetry]
name = "FemtoEncoder"
version = "0.1.0"
description = "Simple python toolset for firmware deployment and handling"
authors = ["SlimeCodex <slimecodex@gmail.com>"]

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pyqt6 = "6.7.1"
pyqt6-frameless-window = "0.4.3"
pyqt6-sip = "13.9.1"
qasync = "0.27.1"
pycryptodome = "^3.20.0"
gitpython = "^3.1.43"
pygithub = "2.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
flake8 = "^6.0"

[tool.poetry.group.build.dependencies]
pyinstaller = "^6.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
combine_as_imports = true

[tool.black]
line-length = 120